# sawaPC_shio_MotionController

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  auto_modeling.m
.claude/: settings.json
config/: comm.json  contec_counter1.json  contec_da1.json  ems.json  force_pi_control.json  force_target.json  layout.json  model_data_record.json  nonlinear_ems.json  remote.json  step_response_mode.json  system.json  thread_config.json
config/joints/: 4018_finger.json
data/: 1780286857660147.csv  model_0422_test1.csv  model_0422_test2.csv  model_0422_test3.csv  model_0423_test1.csv  model_0423_test2.csv  model_0423_test4.csv  model_0430_test1.csv  model_0506_test1.csv  model_test1.csv  model_test2.csv  model_test3.csv  p_noff_0422_test1.csv  p_noff_0422_test2.csv  p_noff_0422_test3.csv  p_noff_0422_test4.csv  p_noff_0422_test6.csv  pi_0422_test2.csv  pi_noff_0422_test1_0.0001.csv  pi_noff_0422_test1_0.001.csv  pi_noff_0422_test1_0.01.csv  pi_noff_0423_kp=0.7_ki=0.001.csv  pi_noff_0423_kp=0.7_ki=0.1.csv  pi_noff_0423_test1_kp=1.0_trapezoid.csv  pi_noff_0423_test1_kp=1.2_ki=0.1_trapezoid.csv  pi_noff_0423_test1_kp=1.2_ki=1.0_trapezoid.csv  pi_noff_0423_test1_kp=1.2_ki=1.2_trapezoid.csv  pi_noff_0423_test1_kp=1.2_trapezoid.csv  pi_noff_0423_test1_kp=1.5_trapezoid.csv  pi_noff_0423_test1_kp=1.8_trapezoid.csv  pi_noff_0423_testtttt.csv  pi_test1.csv  pi_test2.csv  step_response_0423_Vin=1.5.csv  step_response_0423_Vin=2.5.csv  step_response_0423_Vin=2.csv  step_response_0423_Vin=3.0.csv  step_response_0506_10mA_test1_Vin=0.8.csv  step_response_0506_10mA_test1_Vin=2.4.csv  step_response_0506_10mA_test1_Vin=3.2.csv  (+7 more)
data/2026_05_28/: nonlinear_ems.csv  nonlinear_ems1.csv  pi_noff_0430_test1_kp=1.2_ki=1.2_trapezoid.csv  step_response_0528_test.csv
data/2026_06_01/: all_models.mat  auto_modeling.m  model_results.csv  model_test.csv  nonlinear_control_10N.csv  nonlinear_control_6N.csv  nonlinear_control_8N.csv  nonlinear_ems1.csv  nonlinear_gain_param.txt  step_response_0.8V.csv  step_response_0601_test.csv  step_response_2.4V.csv  step_response_3.2V.csv
data/2026_06_02/: all_models.mat  auto_modeling.m  model_results.csv  nonlinear_control_10N.csv  nonlinear_control_6N.csv  nonlinear_control_8N.csv  nonlinear_gain_param.txt  step_response_0.8V.csv  step_response_1.6V.csv  step_response_2.4V.csv  step_response_3.2V.csv
data/2026_06_03/: all_models.mat  auto_modeling.m  nonlinear_gain_param.txt
data/2026_06_08_zim/: model_test.csv
data/2026_06_30/: auto_modeling.m  figure100.eps  figure101.eps  figure102.eps  nonlinear_control_10N_3.csv  nonlinear_control_10N_5.csv  (+3 more)
inc/: contec_counter.h  contec_da.h  control_timer.h  controller.h  enum_helper.h  environment.h  force_target_generator.h  gui.h  gui_widget.h  joint.hpp  joint_parameter_definition.h  json_helper.h  layout.h  leptrino.h  mode_definition.h  pComResInternal.h  pCommon.h  pci_helper.h  reader.h  robot_system.h  signal_processing.h  system_controller.h  thread_controller.h  thread_definition.h  writer.h
lib/: CMakeLists.txt
lib/imgui/: imconfig.h  implot.h  imstb_truetype.h
src/: control_timer.cc  controller.cc  force_sensor_check.cc  force_target_generator.cc  gui.cc  leptrino.cc  main.cc  system_controller.cc  thread_controller.cc
(+234 files in other folders)
